# versa-window-manager

./: .gitignore  Cargo.toml  README.md
src/: command_invoker.rs  commands.rs  main.rs  window.rs  windows_manager.rs
src/commands/: help_command.rs  list_command.rs  restore_command.rs  save_command.rs
