[package]
name = "versa-window-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
features = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]